--- a/src/App.css
+++ b/src/App.css
@@ -136,17 +136,6 @@
   gap: "4rem"
 }
 
-.modal-open .expenseTracker,
-.modal-open .transactionsTab {
-  pointer-events: none;
-}
-
-.modal-open .ReactModal__Overlay,
-.modal-open .ReactModal__Content {
-  pointer-events: auto;
-  z-index: 1000;
-}
-
 @media (min-width:1025px) {
   .expenseTracker {
     background-color: #626262;
@@ -178,30 +167,29 @@
     align-items: center;
   }
 
-  .transactionsTab {
-    display: flex;
-    gap: 4rem;
-    margin: 0rem 2rem;
-    position: relative;
-  }
-
   .transaction {
-    background: white;
-    display: flex;
-    flex-direction: column;
-    /* gap: 1rem; */
-    /* width: 78rem; */
-    min-width: 60rem;
-    border-radius: 1rem;
-  }
+  background: white;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
+.transactionTab {
+  display: flex;
+  flex-direction: row;
+  margin: 0rem 2rem;
+  gap: 4rem;
+}
+
+  
   .transactionHistory {
-    padding: 1rem;
-    margin: 0.5rem 0px;
-    display: flex;
-    justify-content: space-between;
-    /* gap: 28rem; */
-    align-items: center;
+  background-color: white;
+  padding: 1rem;
+  margin: 0.5rem 0;
+  display: flex;
+  justify-content: space-between;
+}
+
   }
 
   .charts {
@@ -238,7 +226,7 @@
   .App {
     overflow-y: auto;
   }
-}
+
 
 @media (min-width: 768px) and (max-width: 1024px) {
   .expenseTracker {
@@ -405,37 +393,3 @@
   }
 }
 
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
