--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   flex-direction: row;
   gap: 3rem;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0rem 2rem;
   border-radius: 1rem;
   height: 15rem;
@@ -167,29 +167,30 @@
     align-items: center;
   }
 
+  .transactionsTab {
+    display: flex;
+    gap: 4rem;
+    margin: 0rem 2rem;
+    position: relative;
+  }
+
   .transaction {
-  background: white;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
+    background: white;
+    display: flex;
+    flex-direction: column;
+    /* gap: 1rem; */
+    /* width: 78rem; */
+    min-width: 60rem;
+    border-radius: 1rem;
+  }
 
-.transactionTab {
-  display: flex;
-  flex-direction: row;
-  margin: 0rem 2rem;
-  gap: 4rem;
-}
-
-  
   .transactionHistory {
-  background-color: white;
-  padding: 1rem;
-  margin: 0.5rem 0;
-  display: flex;
-  justify-content: space-between;
-}
-
+    padding: 1rem;
+    margin: 0.5rem 0px;
+    display: flex;
+    justify-content: space-between;
+    /* gap: 28rem; */
+    align-items: center;
   }
 
   .charts {
@@ -224,9 +225,9 @@
   }
 
   .App {
-    overflow-y: auto;
+    overflow-x: hidden;
   }
-
+}
 
 @media (min-width: 768px) and (max-width: 1024px) {
   .expenseTracker {
@@ -235,12 +236,15 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    /* 👈 allows elements to drop down if no space */
     gap: 2rem;
+    /* 👈 much smaller than 12rem */
     align-items: center;
     justify-content: center;
     margin: 1rem auto;
     border-radius: 1rem;
     height: auto;
+    /* 👈 allow dynamic height */
   }
 
   .borderMap {
@@ -248,6 +252,7 @@
     position: relative;
     top: 0rem;
     width: 100%;
+    /* 👈 better for responsiveness */
     left: 0;
   }
 
@@ -300,13 +305,13 @@
   }
 
   .App {
-    overflow-x: auto;
+    overflow-x: hidden;
   }
 }
 
 @media (max-width:767px) {
   .App {
-    overflow-y: auto;
+    overflow-y: scroll;
   }
 
   .expenseTracker {
@@ -359,6 +364,20 @@
     left: -0.2rem;
   }
 
+  /* .topExpenses {
+    background: white;
+    height: auto;
+    margin: 0rem 2rem;
+    padding: 1rem;
+    border-radius: 1rem;
+  } */
+
+  .topExpenseHeader {
+    font-size: 1.5rem;
+    color: white;
+    font-weight: 700;
+    margin: 1rem 2rem;
+  }
 
   .topExpenseHeader {
     font-size: 1.5rem;
@@ -392,4 +411,3 @@
     max-width: 627px;
   }
 }
-
