--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   height: 100vh;
   overflow-y: scroll;
 }
+.ReactModal__Content {
+  z-index: 9999 !important;
+}
+.recharts-wrapper {
+  z-index: 1; /* Make sure it's lower than modal */
+}
 
 .expenseTracker {
   background-color: #626262;
