removed the recharts css

--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,10 @@
 .ReactModal__Content {
   z-index: 9999 !important;
 }
+/**
 .recharts-wrapper {
   z-index: 1; /* Make sure it's lower than modal */
-}
+/**} **/
 
 .expenseTracker {
   background-color: #626262;
