--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,8 @@
   background-color: #3B3B3B;
   width: 100vw;
   height: 100vh;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
-/**
-.ReactModal__Content {
-  z-index: 9999 !important;
-}
-  **/
-/**
-.recharts-wrapper {
-  z-index: 1; /* Make sure it's lower than modal */
-/**} **/
 
 .expenseTracker {
   background-color: #626262;
@@ -50,7 +41,6 @@
   outline: none;
 }
 
-/**
 .recharts-default-legend {
   display: flex;
 }
@@ -76,7 +66,7 @@
   width: 400px;
   height: 400px;
 }
-**/
+
 .expenseInnerDiv {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
@@ -139,10 +129,9 @@
   gap: "1rem"
 }
 
-
-.transactionsTab {
+.transactionTab {
   display: "flex";
-  flex-direction: "column";
+  flex-direction: "row";
   margin: "0rem 2rem";
   gap: "4rem"
 }
@@ -178,14 +167,14 @@
     align-items: center;
   }
 
-  .transaction {
+  .transactionsTab {
     display: flex;
     gap: 4rem;
     margin: 0rem 2rem;
     position: relative;
   }
 
-  .transactionsTab {
+  .transaction {
     background: white;
     display: flex;
     flex-direction: column;
@@ -236,7 +225,7 @@
   }
 
   .App {
-    overflow-x: auto;
+    overflow-x: hidden;
   }
 }
 
@@ -247,12 +236,15 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    /* 👈 allows elements to drop down if no space */
     gap: 2rem;
+    /* 👈 much smaller than 12rem */
     align-items: center;
     justify-content: center;
     margin: 1rem auto;
     border-radius: 1rem;
     height: auto;
+    /* 👈 allow dynamic height */
   }
 
   .borderMap {
@@ -260,6 +252,7 @@
     position: relative;
     top: 0rem;
     width: 100%;
+    /* 👈 better for responsiveness */
     left: 0;
   }
 
@@ -312,13 +305,13 @@
   }
 
   .App {
-    overflow-x: auto;
+    overflow-x: hidden;
   }
 }
 
 @media (max-width:767px) {
   .App {
-    overflow-y: auto;
+    overflow-y: scroll;
   }
 
   .expenseTracker {
@@ -333,17 +326,16 @@
     border-radius: 1rem;
     height: auto;
   }
-  /**
+
   .recharts-wrapper {
     position: relative;
     cursor: default;
     width: 91%;
     /* height: auto; */
-    /*top: -3rem; */
-  /**}
-  **/
+    top: -3rem;
+  }
 
-  .transactionsTab{
+  .transactionsTab {
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -371,6 +363,14 @@
     width: 39rem;
     left: -0.2rem;
   }
+
+  /* .topExpenses {
+    background: white;
+    height: auto;
+    margin: 0rem 2rem;
+    padding: 1rem;
+    border-radius: 1rem;
+  } */
 
   .topExpenseHeader {
     font-size: 1.5rem;
@@ -400,7 +400,6 @@
     border-radius: 1rem !important;
     margin: auto;
   }
-
   /**
   .recharts-wrapper-horizontal {
     position: relative;
@@ -411,5 +410,5 @@
     max-height: 209px;
     max-width: 627px;
   }
-    **/ 
+    **/
 }
